--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "private": true,
   "author": "Scott Vickers",
   "dependencies": {
+    "aws-sdk": "^2.4.6",
     "bluebird": "^3.4.1",
     "commander": "^2.9.0",
     "lodash": "^4.13.1"
@@ -17,6 +18,8 @@
     "chai": "^3.5.0",
     "del": "^2.2.1",
     "mkdirp": "^0.5.1",
-    "mocha": "^2.5.3"
+    "mocha": "^2.5.3",
+    "rewire": "^2.5.2",
+    "sinon": "^1.17.4"
   }
 }
